test/cases/compile_errors/error_set_decl_literal.zig
export fn entry() void {
    const E = error{Foo};
    const e: E = .Foo;
    _ = e;
}

// error
//
// :3:19: error: expected type 'error{Foo}', found '@Type(.enum_literal)'
